# HyperFastCgi

./: .gitignore  .travis.yml  HyperFastCgi.sln  LICENSE  Makefile.am  Makefile.include  README.md  RELEASENOTES.md  ROADMAP.md  autogen.sh  configure.ac  hyperfastcgi.spec
docker/: README.md
docker/raspberri-pi/: Dockerfile
docker/raspberri-pi/config/: hello-app.conf.tpl
docker/x86/: Dockerfile  entrypoint.sh
docker/x86/config/: hfc.config.tpl
samples/: Makefile.am  combined-two-apps.config  combined.config  hello-world.config  managed.config  sample.webapp  server.config
samples/ubuntu-startup/init.d/: hyperfastcgi4  install-service.sh
samples/ubuntu-startup/systemd/: hyperfastcgi.service  install-service.sh
samples/ubuntu-startup/upstart/: hyperfastcgi.conf  install-service.sh
src/: Makefile.am
src/HyperFastCgi/: .gitignore  HyperFastCgi.csproj  Main.cs  Makefile.am
src/HyperFastCgi/AppHosts/: AppHostBase.cs
src/HyperFastCgi/ApplicationServers/: HostInfo.cs  SimpleApplicationServer.cs
src/HyperFastCgi/Configuration/: AppHostConfig.cs  AppServerConfig.cs  ConfigUtils.cs  ConfigurationManager.cs  ConfigurationManager.xml  ListenerConfig.cs  LogConfig.cs  MultiThreadingOption.cs  ThreadPoolConfig.cs  TransportConfig.cs  WebAppConfig.cs
src/HyperFastCgi/FastCgiProtocol/: FcgiUtils.cs
src/HyperFastCgi/Helpers/: Strings.cs  TestResponse.cs  ThreadHelper.cs
src/HyperFastCgi/HostFactories/: DifferentAppDomainHostFactory.cs  SameAppDomainHostFactory.cs  SystemWebHostFactory.cs
src/HyperFastCgi/Interfaces/: IApplicationHost.cs  IApplicationHostTransport.cs  IApplicationServer.cs  IWebListener.cs  IWebRequest.cs  IWebResponse.cs
src/HyperFastCgi/Listeners/: FastCgiNetworkConnector.cs  ManagedFastCgiListener.cs  NativeListener.cs
src/HyperFastCgi/Logging/: LogLevel.cs  Logger.cs
src/HyperFastCgi/scripts/: .gitignore  Makefile.am  hyperfastcgi2.in  hyperfastcgi4.in
src/Mono.WebServer.HyperFastCgi/: ApplicationHost.cs  Main.cs  Makefile.am  Mono.WebServer.HyperFastCgi.csproj  NetworkConnector.cs  Program.cs  Request.cs  Server.cs  Strings.cs  TestResponse.cs  WebSource.cs  WorkerRequest.cs  mono.webserver.hyperfastcgi.in
src/libnative/: .gitignore  Makefile.am  domain-bridge.c  fcgi-transport.c  fcgi-transport.h  fcgi.c  fcgi.h  host-list.c  host-list.h  libev.c  libev.h  libnative.cbp  main.c  mono-bridge-def.c  mono-bridge-def.h  mono-bridge.c  mono-bridge.h  socket-helper.c  socket-helper.h
(+124 files in other folders)
